finally fixed flicker/screen-refresh bug with help of kelly. i did not invoke e.preventDefault on my form

--- a/app/assets/stylesheets/channels.scss
+++ b/app/assets/stylesheets/channels.scss
@@ -21,7 +21,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin: 10px 0px 10px 0px;
+  margin: 5px 0px 5px 0px;
   text-transform: capitalize;
   -webkit-transition: background-color 1s; /* Safari */
   transition: background-color 1s;
@@ -55,4 +55,24 @@
   transition: background-color 0.5s;
   -webkit-transition: border-radius 0.5s; /* Safari */
   transition: border-radius 0.5s;
+}
+
+.new-channel {
+  font-family: helvetica;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: hsla(0,0%,100%,.3);
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 5px 0px 5px 0px;
+  border: 1px dashed hsla(0,0%,100%,.3);
+}
+
+.new-channel:hover {
+  color: hsla(0,0%,100%,.75);
+  border: 1px dashed hsla(0,0%,100%,.75);
+  cursor: pointer;
 }
